# civiceye-ai2

./: .bandit  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-md.md  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  constitution.md  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  render.yaml  requirements-dev.txt  ruff.toml
.gitlab/ci/: lint.yml  security.yml  test.yml
.specify/: README.md  setup
.specify/memory/: constitution.md
.specify/templates/: feature-spec.md  feature.md  implementation-plan.md  plan-template.md  spec-template.md  tasks-template.md
agent/: user-manual-skills.md
agent/skills/: backend-engineer.md  frontend-engineer.md  fullstack-engineer.md  git-reviewer.md  tester.md
ai-service/: Dockerfile  main.py  requirements.txt
ai-service/models/: __init__.py  classify_complaint.py  detect_entities.py  duplicate_checker.py  prioritize_issue.py
ai-service/prompts/: classify_prompt.txt  routing_prompt.txt  summarizer_prompt.txt
ai-service/providers/: assemblyai_client.py  bhashini_client.py  gemini_client.py  huggingface_client.py  openrouter_client.py
backend/: Dockerfile  requirements.txt  run.py
bruno/: bruno.json
docs/: api-flow.md  architecture.md  pitch-notes.md
scripts/: add_license_headers.py  compliance_checker.py  seed_demo_data.py  setup.sh  start-dev.sh
specs/: 001-initial-spec.md  README.md  ai_triage_feature.md
(+71 files in other folders)
