[project]
name = "civiceye-ai"
version = "0.1.0"
description = "Citizen Issue Reporting Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend", "ai-service"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["backend", "ai-service"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60

[tool.vulture]
paths = ["backend", "ai-service", "scripts"]
min_confidence = 80
exclude = ["*/tests/*", "*/.venv/*", "*/node_modules/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

